--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+.wheaterDetails{
+display: none;
+}
+.checkWheater{
+ 
+}
+.weatherInfo{
+  
+}
+
 
 body, html {
   height: 100%;
