--- a/public/styles.css
+++ b/public/styles.css
@@ -4,9 +4,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-.wheaterDetails{
-display: none;
+.wheaterDetails {
+  display: block; /* Przywrócenie widoczności przycisku */
 }
+
 .checkWheater{
  
 }
@@ -14,13 +15,21 @@ display: none;
   
 }
 .WheaterMoreDetails {
-  display: none; /* Ukryte na początku */
+  display: flex;
+  flex-direction: column;
+  gap: 15px; /* Odstęp między wszystkimi elementami */
   background-color: #f0f0f0;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+.goBackButton {
+  margin-bottom: 15px;
+}
 
+.favoriteButton {
+  margin-top: 15px;
+}
 
 
 
